--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,5 @@ jobs:
 
     - name: Deploy to S3
       run: |
-        aws s3 sync . s3://my-static-web-ghac --exclude ".git/*" --exclude ".github/*" --exclude "README.md"
+        #aws s3 sync . s3://my-static-web-ghac --exclude ".git/*" --exclude ".github/*" --exclude "README.md"
+        aws s3 sync . s3://my-static-web-ghac --exclude ".git/*" --exclude ".github/*" --exclude "README.md" --cache-control "max-age=3600"
